--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -23,12 +23,31 @@ time, mark, audio, video {
     border:0;
     outline:0;
     font-size:100%;
+    color:white;
+
+    font-family: 'Lucida Grande', sans-serif;
     vertical-align:baseline;
     background:transparent;
 }
 
+h1 {
+    font-size:64px;
+    text-align:center;
+}
+
+h2 {
+    font-size: 30 px;
+    text-shadow: #808080, 5px, 5px, 2px;
+}
+
 body {
     line-height:1;
+    background-color: black;
+}
+
+p {
+    font-size: 24 px;
+    padding-top: 20px;
 }
 
 article,aside,details,figcaption,figure,
@@ -57,6 +76,16 @@ a {
     vertical-align:baseline;
     background:transparent;
 }
+
+img {
+
+    display:block;
+    width: 525px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 /* change colours to suit your needs */
 ins {
