--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 html, body, div,
 h1, h2, p {
     
-    font-family: 'Lucida Gradne', sans-serif;
+    font-family: 'Lucida Grande', sans-serif;
     margin:0;
     padding:0;
     border:0;
     outline:0;
-    font-size:100%;
+    font-size:24px;
     color:white;
 
     vertical-align:baseline;
